--- a/omdbapi/pom.xml
+++ b/omdbapi/pom.xml
@@ -26,5 +26,15 @@
   		<artifactId>junit</artifactId>
   		<version>4.11</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.fasterxml.jackson.core</groupId>
+  		<artifactId>jackson-core</artifactId>
+  		<version>2.1.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.fasterxml.jackson.module</groupId>
+  		<artifactId>jackson-module-jaxb-annotations</artifactId>
+  		<version>2.1.2</version>
+  	</dependency>
   </dependencies>
 </project>
