--- a/omdbapi/pom.xml
+++ b/omdbapi/pom.xml
@@ -7,10 +7,17 @@
 	<name>Open Movie Database API</name>
 	<description>Very thin wrapper around http://www.omdbapi.com</description>
 
+
 	<distributionManagement>
+		<repository>
+			<id>omdbapi4j.sf.net</id>
+			<layout>default</layout>
+			<name>sf.net repo</name>
+			<url>scp://shell.sourceforge.net/home/project-web/omdbapi4j/htdocs/maven2</url>
+		</repository>
 		<site>
 			<id>omdbapi4j.sf.net</id>
-			<url>scp://shell.sourceforge.net/home/project-web/omdbapi4j</url>
+			<url>scp://shell.sourceforge.net/home/project-web/omdbapi4j/htdocs</url>
 		</site>
 	</distributionManagement>
 
@@ -53,6 +60,15 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.3.2</version>
+				<configuration>
+					<pushChanges>false</pushChanges>
+					<localCheckout>true</localCheckout>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.2</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.wagon</groupId>
@@ -60,12 +76,47 @@
 						<version>2.3</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.7</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.wagon</groupId>
+						<artifactId>wagon-ssh</artifactId>
+						<version>2.3</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
 				<configuration>
-					<pushChanges>false</pushChanges>
-					<localCheckout>true</localCheckout>
+					<includes>
+						<include>**/*Test*.java</include>
+					</includes>
 				</configuration>
 			</plugin>
-
 		</plugins>
 	</build>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.10</version>
+				<configuration>
+					<printSummary>true</printSummary>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
