--- a/omdbapi/pom.xml
+++ b/omdbapi/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.omdbapi</groupId>
 	<artifactId>omdbapi</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<name>Open Movie Database API</name>
 	<description>Very thin wrapper around http://www.omdbapi.com</description>
 
@@ -22,7 +21,8 @@
 	</distributionManagement>
 	<scm>
 		<developerConnection>scm:git:ssh://ronsmitsnl@git.code.sf.net/p/omdbapi4j/code</developerConnection>
-	</scm>
+	  <tag>omdbapi-0.1.0</tag>
+  </scm>
 	<dependencies>
 		<dependency>
 			<groupId>org.json</groupId>
