--- a/omdbapi/pom.xml
+++ b/omdbapi/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.omdbapi</groupId>
 	<artifactId>omdbapi</artifactId>
-	<version>0.2.1-SNAPSHOT</version>
+	<version>0.3.0</version>
 	<name>Open Movie Database API</name>
 	<description>Very thin wrapper around http://www.omdbapi.com</description>
 
@@ -21,7 +21,7 @@
 	</distributionManagement>
 	<scm>
 		<developerConnection>scm:git:ssh://ronsmitsnl@git.code.sf.net/p/omdbapi4j/code</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>omdbapi-0.3.0</tag>
   </scm>
 	<dependencies>
 		<dependency>
