--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: java
-jdk:
-  - openjdk7
+sudo: false
+
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+
+jdk: oraclejdk8
